--- a/.verb.md
+++ b/.verb.md
@@ -22,7 +22,13 @@ To this:
 ## Usage
 
 ```js
-var expandReflinks = require('{%= name %}');
-console.log(expandReflinks('[bar]: [foo]/bar\n[foo]: 123'));
-//=> '[bar]: 123/bar\n[foo]: 123'
+var expand = require('{%= name %}');
+console.log(expand('[bar]: [foo]/bar\n[foo]: 123'));
+```
+
+Results in:
+
+```
+[bar]: 123/bar
+[foo]: 123
 ```
